--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,12 +2,12 @@ body {
   background-color: black;
   text-align: center;
   font-family: Verdana;
+  color: white;
 }
 
 .title h1 {
   font-weight: normal;
   font-size: 50px;
-  color: white;
 }
 
 .title a {
@@ -18,4 +18,14 @@ body {
 
 main .video {
   padding: 26px;
+}
+
+main h1 {
+  font-weight: 300;
+  font-size: 42px;
+}
+
+main  p {
+  color: gray;
+  font-size: 21px;
 }
