--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 main .video {
-  padding: 26px;
+  padding: 24px;
 }
 
 main h1 {
@@ -30,3 +30,16 @@ main  p {
   font-size: 21px;
 }
 
+main a {
+  color: aquamarine;
+  text-decoration: underline;
+  font-size: 16px;
+  padding: 10px;
+}
+
+footer {
+  color: gray;
+  text-align: right;
+  font-size: 21px;
+  padding: 20px 5px;
+}
