--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,7 +1,7 @@
 body {
   background-color: black;
   text-align: center;
-  font-family: Verdana;
+  font-family: Verdana, sans-serif;
   color: white;
 }
 
@@ -20,7 +20,7 @@ main .video {
   padding: 24px;
 }
 
-main h1 {
+main h2 {
   font-weight: 300;
   font-size: 42px;
 }
@@ -34,12 +34,10 @@ main a {
   color: aquamarine;
   text-decoration: underline;
   font-size: 16px;
-  padding: 10px;
 }
 
 footer {
   color: gray;
   text-align: right;
   font-size: 21px;
-  padding: 20px 5px;
 }
